fix: Updated Flink and Beam examples to latest versions.